<resources>

    <string name="UA">Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/50.0.2661.102 Safari/537.36</string>

    <string name="navigation_drawer_open">打开站点抽屉</string>
    <string name="navigation_drawer_close">关闭站点抽屉</string>

    <string name="nav_category_title">分 类</string>


    <string name="settings_proxy">HProxy 设置</string>
    <string name="settings_proxy_detail">设置HProxy代理</string>
    <string name="settings_proxy_detail_summary">关于 HProxy 的信息请参阅应用主页</string>
    <string name="settings_proxy_enabled">启用 HProxy</string>
    <string name="settings_proxy_enabled_summary">关于 HProxy 的信息请参阅应用主页</string>
    <string name="settings_proxy_request">普通请求</string>
    <string name="settings_proxy_request_summary">在获取相册列表时使用 HProxy</string>
    <string name="settings_proxy_picture">图片</string>
    <string name="settings_proxy_picture_summary">在下载图片时使用 HProxy</string>
    <string name="settings_proxy_server">更改 HProxy 服务器</string>

    <string name="settings_view">浏览设置</string>
    <string name="settings_view_rememberLastSite">记住上次打开站点</string>
    <string name="settings_view_rememberLastSite_summary">打开应用时打开上次退出时打开的站点</string>
    <string name="settings_view_high_res">优先浏览原图</string>
    <string name="settings_view_high_res_summary">在浏览时加载高清原图，可能会降低加载速度</string>
    <string name="settings_view_preload_pages">预加载页数</string>
    <string name="settings_view_preload_pages_summary"> 3 页</string>
    <string name="settings_view_direction">浏览方式</string>
    <string name="settings_view_direction_summary">从左到右</string>
    <string name="settings_view_direction_dialog_title">选择您喜欢的浏览方式</string>
    <string name="settings_view_volume_flick">音量键翻页</string>
    <string name="settings_view_volume_flick_summary">是否开启音量键翻页</string>
    <string name="settings_view_open_one_pic_gallery">单图直接浏览</string>
    <string name="settings_view_open_one_pic_gallery_summary">画册只有一张图时点击直接浏览</string>
    <string name="settings_view_one_hand">单手模式（下次生效）</string>
    <string name="settings_view_one_hand_summary">是否允许从屏幕中间拉出左右抽屉</string>
    <string name="settings_view_video_player">视频播放器</string>
    <string name="settings_view_video_player_summary">内置播放器</string>
    <string name="settings_view_video_player_dialog_title">选择您喜欢的视频播放器</string>

    <string-array name="settings_view_direction_option">
        <item>从左到右</item>
        <item>从右到左</item>
        <item>从上到下</item>
    </string-array>
    <string-array name="settings_view_direction_values">
        <item>left_to_right</item>
        <item>right_to_left</item>
        <item>top_to_bottom</item>
    </string-array>

    <string-array name="settings_view_video_player_option">
        <item>内置播放器</item>
        <item>HTML5播放器</item>
        <item>第三方播放器</item>
    </string-array>
    <string-array name="settings_view_video_player_values">
        <item>ijkplayer</item>
        <item>h5player</item>
        <item>otherplayer</item>
    </string-array>

    <string name="settings_download">下载设置</string>
    <string name="settings_download_high_res">优先下载原图</string>
    <string name="settings_download_high_res_summary">在下载时优先下载高清原图</string>
    <string name="settings_download_nomedia">相册中隐藏已下载图册</string>
    <string name="settings_download_nomedia_summary">在指定的下载目录中生成.nomedia文件</string>
    <string name="settings_download_path">更改保存位置</string>
    <string name="settings_download_path_summary">/sdcard/H-Viewer/download</string>
    <string name="settings_download_import">导入已下载图册</string>
    <string name="settings_download_import_summary">将下载目录中已下载但未在下载管理中的图册导入</string>

    <string name="settings_favourite">收藏管理</string>
    <string name="settings_favourite_export">导出收藏夹</string>
    <string name="settings_favourite_export_summary">将收藏夹数据导出至下载目录进行备份</string>
    <string name="settings_favourite_import">导入收藏夹</string>
    <string name="settings_favourite_import_summary">导入下载目录中的收藏夹备份，相同图册会覆盖</string>

    <string name="settings_cache">缓存管理</string>
    <string name="settings_cache_size">图片缓存大小</string>
    <string name="settings_cache_clean">清理图片缓存</string>
    <string name="settings_cache_clean_summary">清理图片缓存文件，释放空间</string>

    <string name="settings_about">关于</string>
    <string name="settings_about_upgrade">检查更新</string>
    <string name="settings_about_license">开源协议</string>
    <string name="settings_about_privacy">隐私权政策</string>
    <string name="settings_about_h_viewer">关于H-Viewer</string>

    <string name="settings_bk_rs">备份恢复</string>
    <string name="settings_backup">备份</string>
    <string name="settings_backup_summary">备份站点,设置,收藏夹</string>
    <string name="settings_restore">恢复</string>
    <string name="settings_restore_summary">恢复站点,设置,收藏夹</string>

    <string name="setting_about_author">作者</string>
    <string name="setting_about_author_summary">PureDark</string>
    <string name="setting_about_github">Github主页</string>
    <string name="setting_about_github_summary">https://github.com/PureDark/H-Viewer</string>
    <string name="setting_about_changelog">更新日志</string>
    <string name="setting_about_changelog_summary">https://github.com/PureDark/H-Viewer/releases</string>
    <string name="setting_about_version">版本号</string>
    <string name="setting_about_version_summary">v0.1.0</string>
    <string name="setting_about_qq_group">加入内测群</string>
    <string name="setting_about_qq_group_summary">590668841</string>
    <string name="setting_about_donate">捐赠-支付宝</string>
    <string name="setting_about_donate_summary">&lt;bruce.lee.liang@gmail.com&gt;</string>

    <string name="settings_lock_methods">应用解锁方式</string>
    <string name="settings_lock_methods_detail">设置解锁方式</string>
    <string name="settings_lock_methods_detail_summary">未设置</string>

    <string name="setting_pattern_lock_title">图案解锁</string>
    <string name="setting_title_set_pattern">图案</string>
    <string name="setting_summary_set_pattern_none">[ 未设置图案 ]</string>
    <string name="setting_summary_set_pattern_has">[ 已设置图案 ]</string>
    <string name="setting_title_set_pin">数字密码</string>
    <string name="setting_summary_set_pin_none">[ 未设置密码 ]</string>
    <string name="setting_summary_set_pin_has">[ 已设置密码 ]</string>
    <string name="setting_title_fingerprint_lock">指纹解锁</string>
    <string name="setting_summary_fingerprint_lock">设置数字或图案解锁后自动启用</string>
    <string name="setting_title_clear_lock_methods">清除所有解锁方式</string>
    <string name="setting_dialog_message_clear_lock_methods">要清除所有解锁方式吗？</string>
    <string name="setting_lock_methods_cleared">已清除所有解锁方式</string>

    <string name="setting_set_pin_message">请设置4位密码</string>
    <string name="setting_set_pin_confirm_message">请重新输入以确认</string>
    <string name="setting_set_pin_confirm_error">密码错误，请重试</string>


    <string name="restore_succes">还原成功</string>
    <string name="authorization_failed">授权失败将会影响下载和备份</string>
    <string name="no">否</string>
    <string name="yes">是</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="jump_to_page">跳转到第几页？</string>
    <string name="site_loading_error">载入站点出错，请重试</string>
    <string name="search">搜索</string>
    <string name="favorite">收藏</string>
    <string name="refresh">刷新</string>
    <string name="clear">清空</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="favorites">收藏夹</string>
    <string name="hvfavorites">HV收藏夹</string>
    <string name="not_support_function">您的手机版本不支持该功能!</string>
    <string name="download">下载</string>
    <string name="hvdownload">HV下载</string>

    <string name="pin_lock_message">使用指纹或输入数字密码</string>
    <string name="pin_lock_wrong">输入了不正确的数字密码</string>
    <string name="pattern_lock_message">使用指纹或使用图案解锁</string>
    <string name="pattern_lock_wrong">图案不正确</string>
    <string name="finger_print_lock_wrong">无匹配</string>

</resources>